<resources>
    <string name="app_name">ViNAB (YNAB Sync for vikings)</string>
    <string name="title_activity_navigation_drawer">NavigationDrawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="account_status_true">needs sync</string>
    <string name="account_status_false">is synced</string>
    <string name="account_name">My bank account name</string>
    <string name="account_date">31/1–2018</string>
    <string name="transaction_name">Payment from Loblaws #22231</string>
    <string name="transaction_amount_DK">200,44</string>
    <string name="transaction_amount_CA">20.44</string>
    <string name="transaction_currency_KR">kr</string>
    <string name="transaction_currency_CAD">$</string>
    <string name="genericBankName">Bank of Canada</string>
    <string name="ynab">YNAB</string>
    <string name="ynab_username">Username</string>
    <string name="ynab_budget">YNAB Budget</string>
    <string name="ynab_budget_account">Budget Account</string>

    <string name="description_SyncDetails">These accounts form a connection between a your bank and YNAB account. Here you can edit or delete your
        account connections.
    </string>
    <string name="backgroundDescription">This is a background element</string>
    <string name="my_budget">My budget</string>
    <string name="debit_acc_bank_of_canada">Debit Acc :: Bank of Canada</string>
    <string name="creditCardNo">*************456</string>
    <string name="debit_account">Debit Account</string>
    <string name="checkbox">CheckBox</string>
    <string name="button">Button</string>
    <string name="vinab_email">ViNAB email</string>
    <string name="vinab_password">ViNAB password</string>
    <string name="remember_me">Remember me</string>
    <string name="vinab_budget_sync_for_vikings">ViNAB Budget Sync for Vikings</string>
    <string name="bank">Bank</string>
    <string name="bank_account_name">Bankaccount Name</string>
    <string name="nickname">Nickname</string>
    <string name="institution">Institution</string>

    <string name="budget_account">Budget Account</string>
    <string name="my_account">My Account</string>
    <string name="sync_account_name">Account Name</string>
    <string name="latest_sync_date">Latest Sync Date</string>
    <string name="delete_account">DELETE ACCOUNT</string>
    <string name="save_account">Save account</string>
    <string name="login">login</string>
    <string name="my_email_com">my@email.com</string>
    <string name="_123456">123456</string>

</resources>
