<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
android:layout_height="60dp"
android:layout_margin="8dp"
app:cardElevation="4dp">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/account_card_view_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/account_name"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Body2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/account_card_view_date"
            app:layout_constraintStart_toStartOf="@+id/account_card_update_status_img_view"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/account_card_view_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="8dp"
            android:text="@string/account_date"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Body2"
            app:layout_constraintBottom_toBottomOf="@+id/account_card_view_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/account_card_view_name" />

        <ImageView
            android:id="@+id/account_card_update_status_img_view"
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:contentDescription="@string/account_status_false"
            android:visibility="visible"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@android:drawable/presence_online" />
    </android.support.constraint.ConstraintLayout>

</android.support.v7.widget.CardView>